 * Check libpurple and glib minor version number in configure
 * Cleaned and enhanced the make system
 * Paranoia: Support for multiple key files per conversation
 * Paranoia: Use the new libotp api (set/get and config)
 * Paranoia: Key settings are resetted if a buddy goes offline
 * Paranoia: '/otp list' added to list all available keys
 * Paranoia: no more request messages for offline buddies

Christian Wäckerlin:
 * Libotp: System of error syndromes (OtpError) implemented
 * Libotp: otp_encrypt, otp_decrypt, otp_encrypt_warning are now transactional
 * Libotp: getter/setter system, struct otp is now private
 * Libotp: otp_conf system implemented, libotp is multi-application aware
 * Libotp keeps filehandles and mmap open to save CPU cycles.
 * Libotp locks the keyfiles that are in use.
 * Libotp: A tailing minimal padding is added to the messages on encryption 
   (and also random length padding) (allows future feature without breakage 
   of the spec.)
 * Debian/Ubuntu package support added

Pascal Sachs:
 * Libotp: Create and integrate the threaded key-generator
 * Libotp: Support for loop key creation


Version 0.1.0
--------------------------------------------------------------------------------
Simon Wenner:
 * Paranoia: Basic plugin structure, libotp API
 * A build system 'from hell'! (but it seems to work)
 * Session and key management documentation
 * Paranoia: CLI functionality
 * Paranoia: Key list search functions
 * Paranoia: Key list is generated from files and can be freed
 * Paranoia: Basic session initialisation
 * Paranoia: Basic session closing
 * Paranoia: Encryptet messages are labelled
 * Paranoia: Working commands: /otp help, info, on, off, genkey
 * Paranoia: Change fake <otp> strings
 * Paranoia: Session closing on plugin unload

Christan Wäckerlin:
 * One-time pad documentation
 * Libotp: xor function
 * Libotp: base64 encode and decode using gnomelib
 * Libotp: encrypt and decrypt
 * Libotp: struct *mypad is generated from keyfile